--- a/src/styles.css
+++ b/src/styles.css
@@ -736,6 +736,10 @@ input, select, textarea {
 }
 
 /* Panel im View-Modus: wie Detailansicht */
+/* .panel.panel--view {
+  // evtl. hier noch ne etwas andere Optik
+  // background: var(--color-bg); // z.B. gleiche Farbe wie App oder so. Mary?
+} */
 .panel.panel--view .form {
   gap: 6px;
 }
