--- a/src/styles.scss
+++ b/src/styles.scss
@@ -761,10 +761,10 @@ border: 1px solid rgba(255, 255, 255, 0.16);
 }
 // --- viewMode des panels
 /* Panel im View-Modus: wie Detailansicht */
-.panel.panel--view {
+/* .panel.panel--view {
   // evtl. hier noch ne etwas andere Optik
   // background: var(--color-bg); // z.B. gleiche Farbe wie App oder so. Mary?
-}
+} */
 .panel.panel--view .form {
     gap: 6px;
 }
